--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,8 @@
 # These requirements are for DEVELOPMENT ONLY!
-# You do not need e.g. Sphinx or Fudge just to run the 'fab' tool.
-# Instead, these are necessary for executing the test suite.
-#
-# PLEASE NOTE: due to how Pip currently works, you will need to manually
-# execute "pip install Mercurial" before using this file. Otherwise it will
-# bail out upon trying to install Fudge from BitBucket.
+# You do not need e.g. Sphinx or Fudge just to run the 'fab' tool on your own
+# fabfiles. These are only necessary for executing the test suite.
 
-pycrypto >= 1.9
-nose
-rudolf
-coverage
-pylint
-Fudge < 1.0
-Sphinx >= 0.6
+nose >= 1.0, <= 1.1
+rudolf >= 0.3, < 0.4
+Fudge >= 1.0, < 1.1
+Sphinx >= 1.0, < 1.1
